// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to ignore rule unexpected-module-syntax 1`] = `
[
  "[arethetypeswrong] test-unexpected-module-syntax v0.0.0

 (ignoring rules: 'unexpected-module-syntax')

 No problems found 🌟
┌───────────────────┬─────────────────────────────────┐
│                   │ "test-unexpected-module-syntax" │
├───────────────────┼─────────────────────────────────┤
│ node10            │ 🟢                              │
├───────────────────┼─────────────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ node16 (from ESM) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ bundler           │ 🟢                              │
└───────────────────┴─────────────────────────────────┘",
]
`;

exports[`should throw when have unexpected module syntax 2`] = `
[
  "[arethetypeswrong] test-unexpected-module-syntax v0.0.0

🚭 Syntax detected in the module is incompatible with the module kind according to the package.json or file extension. This is an error in Node and may cause problems in some bundlers. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/UnexpectedModuleSyntax.md


┌───────────────────┬─────────────────────────────────┐
│                   │ "test-unexpected-module-syntax" │
├───────────────────┼─────────────────────────────────┤
│ node10            │ 🟢                              │
├───────────────────┼─────────────────────────────────┤
│ node16 (from CJS) │ 🚭 Unexpected module syntax     │
├───────────────────┼─────────────────────────────────┤
│ node16 (from ESM) │ 🚭 Unexpected module syntax     │
├───────────────────┼─────────────────────────────────┤
│ bundler           │ 🟢                              │
└───────────────────┴─────────────────────────────────┘",
]
`;
